adding vector2d to math

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-add_executable(CorruptThemAll src/main.cpp)
+add_executable(CorruptThemAll src/main.cpp src/math_utils.cpp)
 
 target_link_libraries(CorruptThemAll SDL2::SDL2main SDL2::SDL2 SDL2_image::SDL2_image)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
